[#2859 #2903] Fix image removal in indicator update form
This is a functional fix. By setting the z-index on the div that displays the "remove image" text it comes on top of the input element allowing it to be shown on hover and clicked on.

However the text itself doesn't align vertically corract, leading to it being below the image if the image height is small.

--- a/akvo/rsr/static/styles-src/main.scss
+++ b/akvo/rsr/static/styles-src/main.scss
@@ -5083,6 +5083,7 @@ main.results-page {
         .image-container {
             position: relative;
             margin-top: 5px;
+            z-index: 1000;
 
             @include transition(all 0.2s ease-in-out);
 
@@ -5102,7 +5103,7 @@ main.results-page {
 
             &:hover .image-overlay {
                 display: block;
-                background: rgba(255, 255, 255, 0.9);
+                background: rgba(255, 255, 255, 0.5);
             }
         }
 
